--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngneat/transloco": "4.2.7",
     "apexcharts": "3.40.0",
     "crypto-js": "3.3.0",
+    "dotenv": "^16.4.5",
     "highlight.js": "11.8.0",
     "lodash-es": "4.17.21",
     "luxon": "3.3.0",
