--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "rimraf ./dist && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "deploy:surge": "surge",
